# leetcode-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SUBSTRATE.md  clean-build.Dockerfile  flake.nix  leetcode.toml  rust-toolchain  rust-toolchain.toml  spec.md
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: clippy.yml  release.yml  rust.yml
code/: 1.two-sum.rs  100.same-tree.rs  143.reorder-list.rs  150.evaluate-reverse-polish-notation.rs  153.find-minimum-in-rotated-sorted-array.rs  154.find-minimum-in-rotated-sorted-array-ii.rs
crates/srml/: Cargo.toml  README.md
crates/srml/runtime/: Cargo.toml
crates/www/: Cargo.toml
docs/: configuration.md  cookies.md  editors.md  scripting.md
examples/: pym.rs
examples/ct/: main.rs
examples/html/: main.rs
examples/sqlite/: main.rs
examples/vr/: main.rs
spec/: README.md
src/: api.rs  cache.rs  cfg.rs  cli.rs  conf.rs  err.rs  flag.rs  helper.rs  lib.rs  log.rs  main.rs  pym.rs  store.rs
src/cache/: mod.rs  models.rs  parser.rs  schemas.rs  sql.rs
src/cmd/: completions.rs  data.rs  edit.rs  exec.rs  list.rs  mod.rs  pick.rs  stat.rs  test.rs
src/cmds/: cache.rs  completions.rs  contest.rs  data.rs  edit.rs  exec.rs  fun.rs  list.rs  mod.rs  pick.rs  stat.rs  test.rs
src/config/: code.rs  cookies.rs  mod.rs  storage.rs  sys.rs
src/plugins/: #leetcode.rs#  .#leetcode.rs  chrome.rs  leetcode.rs  mod.rs
tests/: de.rs  tag.rs
