[[bin]]
name = "leetcode"
path = "src/bin/lc.rs"

[package]
name = "leetcode-cli"
version = "0.5.0"
authors = ["clearloop <tianyi.gc@gmail.com>"]
edition = "2024"
description = "Leetcode command-line interface in rust."
repository = "https://github.com/clearloop/leetcode-cli"
license = "MIT"
documentation = "https://docs.rs/leetcode_cli"
homepage = "https://github.com/clearloop/leetcode-cli"
keywords = ["cli", "games", "leetcode"]
readme = './README.md'

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.6"
keyring = "3.6.3"
log = "0.4.29"
openssl = "0.10"
pyo3 = { version = "0.27", optional = true }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.10"
regex = "1.12.2"
scraper = "0.25.0"
anyhow = "1.0.100"
clap_complete = "4.5"
thiserror = "2.0.17"
unicode-width = "0.2"
notify = "8.2.0"

[dependencies.diesel]
version = "2.2.12"
features = ["sqlite"]

[dependencies.reqwest]
version = "0.13.1"
features = ["gzip", "json"]

[features]
pym = ["pyo3"]

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }
