[[bin]]
name = "leetcode"
path = "src/bin/lc.rs"

[package]
name = "leetcode-cli"
version = "0.5.2"
authors = ["clearloop <tianyi.gc@gmail.com>"]
edition = "2024"
description = "Leetcode command-line interface in rust."
repository = "https://github.com/clearloop/leetcode-cli"
license = "MIT"
documentation = "https://docs.rs/leetcode_cli"
homepage = "https://github.com/clearloop/leetcode-cli"
keywords = ["cli", "games", "leetcode"]
readme = './README.md'

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6", features = ["cargo", "derive"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.31"
pyo3 = { version = "0.29", optional = true }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
regex = "1.12.3"
scraper = "0.27.0"
anyhow = "1.0.102"
clap_complete = "4.6"
thiserror = "2.0.18"
unicode-width = "0.2"
notify = "8.2.0"
rookie = "0.5.6"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

[dependencies.diesel]
version = "2.3.9"
features = ["sqlite"]

[dependencies.reqwest]
version = "0.13.4"
features = ["gzip", "json"]

[features]
pym = ["pyo3"]

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.31.3", features = ["signal"] }
